# mawnolaug

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  rust-toolchain.toml
src/: config.rs  error.rs  handler.rs  index.rs  main.rs  random_draw.rs  state.rs  utils.rs
src/command/: create.rs  create_for.rs  mod.rs  random.rs  registration_helper.rs  remove.rs  remove_for.rs  trigger.rs
src/data/: config.rs  index.rs  mod.rs  state.rs
