[package]
name = "mawnolaug"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["toml", "env"] }
poise = "0.6.1"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
slug = "0.1.6"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "net", "fs", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
